--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "FRP examples for Fluent 2016 talk",
   "dependencies": {
     "bourbon": "^4.2.6",
+    "d3": "^3.5.6",
     "jquery": "^2.1.4",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "node-sass": "^3.4.1",
-    "rx": "^4.0.6"
+    "rx": "^4.0.6",
+    "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.0.15",
-    "babel-loader": "^6.0.0",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.2",
