--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bourbon": "^4.2.6",
     "d3": "^3.5.6",
+    "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
