--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "fluent-frp",
-  "version": "0.0.1",
-  "description": "FRP examples for Fluent 2016 talk",
+  "name": "marbelous",
+  "version": "1.0.0",
+  "description": "live visualization of Observables",
   "dependencies": {
-    "bourbon": "^4.2.6",
     "d3": "^3.5.6",
     "immutable": "^3.7.5",
-    "jquery": "^2.1.4",
-    "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2",
-    "node-sass": "^3.4.1",
     "rx": "^4.0.6",
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
+    "jquery": "^2.1.4",
+    "bourbon": "^4.2.6",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
+    "node-sass": "^3.4.1",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "grunt": "^0.4.5",
