--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "bourbon": "^4.2.6",
     "jquery": "^2.1.4",
+    "marbelous": "^1.0.4",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "node-sass": "^3.4.1",
-    "rx": "^4.0.6"
+    "rxjs": "^5.0.0-beta.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.15",
     "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.3.13",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.2",
