--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fluent-frp",
   "version": "0.0.1",
   "description": "FRP examples for Fluent 2016 talk",
+  "scripts": {
+    "test": "mocha --compilers js:babel-register"
+  },
   "dependencies": {
     "bourbon": "^4.2.6",
     "jquery": "^2.1.4",
@@ -15,6 +18,7 @@
     "babel-core": "^6.0.15",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.3.13",
+    "chai": "^3.4.1",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.2",
@@ -22,6 +26,7 @@
     "grunt-sass": "^1.1.0",
     "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.3.0",
+    "mocha": "^2.4.4",
     "sass-loader": "^3.1.1",
     "underscore": "^1.8.3",
     "webpack": "^1.12.2",
