--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "node-sass": "^3.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "rxjs": "^5.0.0-beta.1"
+    "rxjs": "^5.0.0-beta.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.15",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.2",
